# AndroDev-Assistant

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  build_windows.ps1  full_release.ps1  generate_release.ps1  installer.nsi  release_precheck.ps1  test_build.ps1  update_version.ps1
